--- a/Phase2/include/content.html
+++ b/Phase2/include/content.html
@@ -65,6 +65,22 @@
 				<td><input type="number" name="sickHrs_5" value="0" step=".5" /></td>
 				<td><input type="checkbox" name="holiday_5" value="unchecked"/></td>
 			</tr>
+			<tr>
+				<td id="day">Saturday</td>
+				<td><input type="date" name="date_6" /></td>
+				<td><input type="number" name="wrkHrs_6" value="8"" step=".5" /></td>
+				<td><input type="number" name="vacHrs_6" value="0" step=".5" /></td>
+				<td><input type="number" name="sickHrs_6" value="0" step=".5" /></td>
+				<td><input type="checkbox" name="holiday_6" value="unchecked"/></td>
+			</tr>
+			<tr>
+				<td id="day">Sunday</td>
+				<td><input type="date" name="date_7" /></td>
+				<td><input type="number" name="wrkHrs_7" value="8"" step=".5" /></td>
+				<td><input type="number" name="vacHrs_7" value="0" step=".5" /></td>
+				<td><input type="number" name="sickHrs_7" value="0" step=".5" /></td>
+				<td><input type="checkbox" name="holiday_7" value="unchecked"/></td>
+			</tr>
 	<!--		<tr>
 				<thead>
 					<th>Week 2</th>
