--- a/Phase2/include/content.html
+++ b/Phase2/include/content.html
@@ -68,18 +68,18 @@
 			<tr>
 				<td id="day">Saturday</td>
 				<td><input type="date" name="date_6" /></td>
-				<td><input type="number" name="wrkHrs_6" value="8"" step=".5" /></td>
+				<td><input type="number" name="wrkHrs_6" value="0"" step=".5" /></td>
 				<td><input type="number" name="vacHrs_6" value="0" step=".5" /></td>
 				<td><input type="number" name="sickHrs_6" value="0" step=".5" /></td>
-				<td><input type="checkbox" name="holiday_6" value="unchecked"/></td>
+				<td><input type="checkbox" name="holiday_6" value="checked"/></td>
 			</tr>
 			<tr>
 				<td id="day">Sunday</td>
 				<td><input type="date" name="date_7" /></td>
-				<td><input type="number" name="wrkHrs_7" value="8"" step=".5" /></td>
+				<td><input type="number" name="wrkHrs_7" value="0"" step=".5" /></td>
 				<td><input type="number" name="vacHrs_7" value="0" step=".5" /></td>
 				<td><input type="number" name="sickHrs_7" value="0" step=".5" /></td>
-				<td><input type="checkbox" name="holiday_7" value="unchecked"/></td>
+				<td><input type="checkbox" name="holiday_7" value="checked"/></td>
 			</tr>
 	<!--		<tr>
 				<thead>
